fixed issue of header lines not showing up

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -48,7 +48,7 @@ strong {
 }
 
 .header-line-container-line {
-	height: 1px;
+	height: 2px;
 	width: 25%;
 	background-color: #FFFFFF;
 
